# notebooks

./: .deepsource.toml  .gitignore  LICENSE  devenv.nix  devenv.yaml  pyproject.toml
.github/: mergify.yml
.github/workflows/: ci.yaml
notebooks/data-analysis/car-price-prediction/: README.md  notebook.ipynb  pyproject.toml
notebooks/data-analysis/motorcycle-data-analysis/: README.md  notebook.ipynb  pyproject.toml
notebooks/deep-learning/autoencoder/: pyproject.toml
notebooks/deep-learning/inception-network/: pyproject.toml
notebooks/deep-learning/spam-detection/: notebook.ipynb  pyproject.toml
notebooks/deep-learning/word2vec/: pyproject.toml
notebooks/fine-tuning/llama3-fine-tuning-as-napoleon-bonaparte/: pyproject.toml
notebooks/fine-tuning/phi-2-fine-tuning-as-napoleon-bonaparte/: pyproject.toml
notebooks/machine-learning/active-learning/: README.md  notebook-no-gui.ipynb  notebook-unbalanced-dataset.ipynb  notebook.ipynb  pyproject.toml
notebooks/machine-learning/active-learning/docs/: technical-report.docx
notebooks/machine-learning/iris-classification-from-scratch/: pyproject.toml
notebooks/machine-learning/k-means/: pyproject.toml
notebooks/machine-learning/logistic-regression-from-scratch/: pyproject.toml
notebooks/machine-learning/logistic-regression-with-k-fold/: pyproject.toml
notebooks/machine-learning/logistic-regression-with-least-squares-technique/: pyproject.toml
notebooks/machine-learning/medical-insurance-cost-prediction/: README.md  notebook.ipynb  pyproject.toml
notebooks/machine-learning/naive-bayes-with-normal-distribution/: pyproject.toml
notebooks/machine-learning/product-recommendation/: README.md  notebook.ipynb  pyproject.toml
notebooks/pre-processing/text-processing/: pyproject.toml
notebooks/rag/try-docling/: pyproject.toml
