[project]
  dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
  ]
  description = "MH0386's Notebooks"
  name = "mh0386-notebooks"
  readme = "README.md"
  version = "0.0.1"

[dependency-groups]
  dev = ["nb-clean>=4.0.1", "ruff>=0.14.14", "ty>=0.0.29"]

[tool.uv.workspace]
  members = [
    "notebooks/data-analysis/*",
    "notebooks/deep-learning/*",
    "notebooks/fine-tuning/*",
    "notebooks/machine-learning/*",
    "notebooks/pre-processing/*",
    "notebooks/rag/*",
  ]
