[project]
  dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets==8.1.8",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
  ]
  description = "Add your description here"
  name = "car-price-prediction"
  readme = "README.md"
  requires-python = ">=3.13"
  version = "0.0.1"
