[project]
  dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "tensorflow[and-cuda]>=2.20.0",
  ]
  name = "autoencoder"
  readme = "README.md"
  requires-python = ">=3.13"
  version = "0.0.1"

[dependency-groups]
  dev = ["ruff>=0.15.13", "ty>=0.0.35"]
