[project]
  dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "tensorflow[and-cuda]>=2.21.0",
  ]
  name = "spam-detection"
  readme = "README.md"
  requires-python = ">=3.14.4"
  version = "0.0.1"
