[project]
  dependencies = [
    "gradio>=6.14.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-activeml>=1.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
  ]
  name = "active-learning-with-machine-learning"
  readme = "README.md"
  requires-python = ">=3.13"
  version = "0.0.1"

[dependency-groups]
  dev = ["ruff>=0.15.13", "ty>=0.0.35"]
