[project]
  dependencies = [
    "kagglehub>=1.0.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
  ]
  description = "Add your description here"
  name = "medical-insurance-cost-prediction"
  readme = "README.md"
  requires-python = "<3.14"
  version = "0.0.1"
