[project]
  dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
  ]
  name = "product-recommendation"
  readme = "README.md"
  requires-python = ">=3.14.4"
  version = "0.0.1"

[dependency-groups]
  dev = ["ruff>=0.15.12", "ty>=0.0.35"]
